increased zindex of nav and fixed whitespace

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -6,6 +6,7 @@
     background-color: rgb(247, 247, 247);
     display: flex;
     align-items: center;
+    z-index: 5;
 
     .burger {
         width: 50px;
